# Agent-learn

./: .gitignore  PROJECTS.md  README.md  ROADMAP_90_DAYS.md  WEEK_01_PLAN.md
evals/: README.md  tool_agent_cases.jsonl
experiments/: README.md
interview/: README.md
notes/: 2026-06-11-agent-basics.md  2026-06-12-tool-agent-project-setup.md  README.md
projects/: README.md
projects/01-tool-agent/: FAILURES.md  IMPLEMENTATION_GUIDE.md  MASTERY_CHECKLIST.md  README.md  pyproject.toml
projects/01-tool-agent/src/tool_agent/: __init__.py  agent.py  cli.py  tools.py
projects/01-tool-agent/tests/: test_agent.py  test_tools.py
